--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rsvp",
   "version": "1.0.0",
   "description": "projectTwoHoneyBadgers",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,13 +22,13 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "meetup-api": "^1.4.35",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "mustache-express": "^1.2.8",
-    "pg": "^7.7.1",
     "pg-promise": "^8.5.3"
   },
   "engine": {
-    "node" :"11.2.0"
-}
+    "node": "11.2.0"
+  }
 }
